--- a/CssColorMarkers/styles.css
+++ b/CssColorMarkers/styles.css
@@ -1,6 +1,9 @@
 h1 {
     text-align: center;
 }
+.container {
+    background-color: rgb(0, 0, 0);
+}
 .marker {
     background-color: red;
     height: 25px;
