--- a/CssColorMarkers/styles.css
+++ b/CssColorMarkers/styles.css
@@ -14,9 +14,9 @@ h1 {
     background-color: rgb(255, 0, 0);
 }
 .two {
-    background-color: green
+    background-color: rgb(0, 255, 0);
 }
 
 .three {
-    background-color: blue
+    background-color: rgb(0, 0, 255);
 }
