--- a/CssColorMarkers/styles.css
+++ b/CssColorMarkers/styles.css
@@ -14,10 +14,10 @@ h1 {
 .red {
     background-color: rgb(255, 0, 0);
 }
-.two {
+.green {
     background-color: rgb(0, 127, 0);
 }
 
-.three {
+.blue {
     background-color: rgb(0, 0, 255);
 }
